<resources>
    <string name="app_name">Warren challenge</string>
    <string name="your_objectives">Seus objetivos</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="login">Login</string>
    <string name="welcome">Bem vind@!</string>
    <string name="login_button_content_description">Botão para realizar o login</string>
    <string name="close_app_button">Botão para encerrar o aplicativo</string>
    <string name="internal_error">Ocorreu um erro interno, por favor tente novamente mais tarde</string>
    <string name="balance_and_income">Saldo e rendimentos Bruto</string>
    <string name="withtout_items">Não encontramos nem uma carteira :c</string>
    <string name="ok">ok</string>
</resources>